Use bootstrap's .table-responsive for front page td issue instead of word wrap css. Nead to start modularizing charon.scss

--- a/app/assets/stylesheets/charon.scss
+++ b/app/assets/stylesheets/charon.scss
@@ -17,11 +17,6 @@ footer {
   flex-grow: 0;
 }
 
-td.word-wrap {
-  word-wrap:break-word;
-  word-break:break-all;
-}
-
 .footer {
   background-color: #385775;
   color: $light;
